--- a/difficulties/index.html
+++ b/difficulties/index.html
@@ -11,11 +11,11 @@
       rel="stylesheet"
       type="text/css"
     />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="../output.css" rel="stylesheet" />
   </head>
   <body
     data-theme="light"
-    class="grid min-h-screen w-full lg:grid-cols-[135px_1fr_280px]"
+    class="grid min-h-screen h-full w-full lg:grid-cols-[135px_1fr_280px]"
   >
     <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
       <a class="p-2 font-bold btn" href="/">Accueil</a>
@@ -28,7 +28,7 @@
     </div>
 
     <div class="relative space-y-4">
-      <h1 class=" text-3xl font-extrabold dark:text-white">
+      <h1 class="text-lg font-extrabold">
         La détresse financière au Québec en nombre
       </h1>
       <svg class="mx-auto" id="mapSvg"></svg>
