--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,18 +16,17 @@
       content="George Salib, Zakaria Sbai-Chkirid, Khalil Beddouch, Nassim Boughedaoui, Abderahim Laribi, Artour Benevolenski"
     />
     <title>Le Devoir: Marché immobilier</title>
-    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.7/dist/full.min.css"
       rel="stylesheet"
       type="text/css"
     />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="./output.css" rel="stylesheet" />
     <script src="https://d3js.org/d3.v6.min.js" defer></script>
   </head>
   <body
     data-theme="light"
-    class="grid min-h-screen w-full md:grid-cols-[220px_1fr] lg:grid-cols-[135px_1fr]"
+    class="grid min-h-screen h-full w-full md:grid-cols-[220px_1fr] lg:grid-cols-[135px_1fr]"
   >
     <nav
       class="flex h-full flex-col gap-4 p-4 bg-neutral-400"
@@ -42,7 +41,7 @@
       <a class="p-2 font-bold btn" href="/mortgages">Hypothèques</a>
     </nav>
     <main class="flex-1 flex flex-col gap-4 p-4" id="content">
-      <h1 class=" text-3xl font-extrabold dark:text-white">
+      <h1 class="text-lg font-extrabold">
         Bienvenue sur la page web de notre outil de visualisation de données
         immobilières!
       </h1>
@@ -103,8 +102,13 @@
               Graphique à barres empilées représentant le nombre d'achats par
               gamme de prix pour chaque région
             </li>
-            <li>Légende cliquable pour afficher ou cacher chaque gamme de prix</li>
-            <li>Infobulles contenant le nom de la région et le nombre d'achats pour chaque gamme de prix</li>
+            <li>
+              Légende cliquable pour afficher ou cacher chaque gamme de prix
+            </li>
+            <li>
+              Infobulles contenant le nom de la région et le nombre d'achats
+              pour chaque gamme de prix
+            </li>
           </ul>
           <a href="/sales" class="btn btn-primary mt-2 self-end">Voir plus</a>
         </div>
@@ -122,9 +126,18 @@
             propriétaires.
           </p>
           <ul class="list-disc pl-5 flex-grow text-sm">
-            <li>Carte choroplèthe représentant les détresse financières des régions selon un intervalle de temps sélectionné</li>
-            <li>Légende indiquant si le nombre total de détresses financières est faible ou élevé </li>
-            <li>Infobulles contenant le nombre de détresses (avis de vente, faillites, hypothèques construction, préavis et saisies)</li>
+            <li>
+              Carte choroplèthe représentant les détresse financières des
+              régions selon un intervalle de temps sélectionné
+            </li>
+            <li>
+              Légende indiquant si le nombre total de détresses financières est
+              faible ou élevé
+            </li>
+            <li>
+              Infobulles contenant le nombre de détresses (avis de vente,
+              faillites, hypothèques construction, préavis et saisies)
+            </li>
           </ul>
           <a href="/difficulties" class="btn btn-primary mt-2 self-end"
             >Voir plus</a
@@ -142,9 +155,15 @@
             fil du temps
           </p>
           <ul class="list-disc pl-5 flex-grow text-sm">
-            <li>Graphique en aires empilées représentant le nombre d'hypothèques selon le mois pour chacune des régions</li>
+            <li>
+              Graphique en aires empilées représentant le nombre d'hypothèques
+              selon le mois pour chacune des régions
+            </li>
             <li>Filtres pour choisir les régions et la période à couvrir</li>
-            <li>Marqueurs et pente pour réprésenter visuellement la variation nette du volume des hypothèques durant une période</li>
+            <li>
+              Marqueurs et pente pour réprésenter visuellement la variation
+              nette du volume des hypothèques durant une période
+            </li>
           </ul>
           <a href="/mortgages" class="btn btn-primary mt-2 self-end"
             >Voir plus</a
