--- a/transfers/index.html
+++ b/transfers/index.html
@@ -6,13 +6,14 @@
     <title>Le Devoir: Marché immobilier</title>
     <link rel="stylesheet" href="/styles.css" />
     <script src="https://d3js.org/d3.v6.min.js"></script>
+    <link href="./output.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.7/dist/full.min.css"
       rel="stylesheet"
       type="text/css"
     />
-    <script src="https://cdn.tailwindcss.com"></script>
-     <style>
+    <link href="../output.css" rel="stylesheet" />
+    <style>
       .tooltip {
         position: absolute;
         text-align: left;
@@ -43,9 +44,7 @@
     </div>
 
     <div class="flex flex-col flex-1 bg-gray-100">
-      <h1 class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">
-        Nombre de Requêtes par Région
-      </h1>
+      <h1 class="text-lg font-extrabold">Nombre de Requêtes par Région</h1>
       <div class="controls mb-4 flex p-4 items-center justify-center">
         <label for="timeSelector" class="mr-2"
           >Sélectionner l'interval de temps:</label
@@ -54,7 +53,7 @@
           <option value="month">Mensuel</option>
           <option value="year">Annuel</option>
         </select>
-         <label for="dateSelector" class="ml-4 mr-2"
+        <label for="dateSelector" class="ml-4 mr-2"
           >Sélectionner la date:</label
         >
         <select id="dateSelector" class="p-2 border rounded-md">
