--- a/sales/index.html
+++ b/sales/index.html
@@ -6,17 +6,16 @@
     <title>Le Devoir: Marché immobilier</title>
     <link rel="stylesheet" href="/styles.css" />
     <script src="https://d3js.org/d3.v6.min.js"></script>
-    <link href="./output.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.7/dist/full.min.css"
       rel="stylesheet"
       type="text/css"
     />
-    <link href="../output.css" rel="stylesheet" />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body
     data-theme="light"
-    class="grid min-h-screen h-full w-full md:grid-cols-[220px_1fr] lg:grid-cols-[135px_1fr]"
+    class="grid min-h-screen w-full md:grid-cols-[220px_1200_auto] lg:grid-cols-[135px_1200px_auto]"
   >
     <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
       <a class="p-2 font-bold btn" href="/">Accueil</a>
@@ -30,7 +29,39 @@
 
     <div class="flex flex-col">
       <h1 class="text-lg font-extrabold">Nombre d'achats par gamme de prix</h1>
-      <div class="flex-1" id="content"></div>
+      <div id="svg-container-ventes">
+        <div id="content-ventes"></div>
+      </div>
+      <div
+        class="grid grid-rows-[10px_auto] content-between gap-5 items-center justify-center"
+        id="controlsVentes"
+      >
+        <div class="time_filter" id="time_filter">
+          <label class="text-black font-bold" for="start-year"
+            >Choisissez la période à couvrir</label
+          >
+          <div class="grid gap-1 grid-cols-[2fr_3fr_3fr] items-center">
+            <label for="start-year">Début</label>
+            <select class="select select-sm select-bordered" id="start-year">
+              <option value="2019">2019</option>
+              <!-- Plus d'options -->
+            </select>
+            <select class="select select-sm select-bordered" id="start-month">
+              <option value="January">Janvier</option>
+              <!-- Plus d'options -->
+            </select>
+            <label for="end-year">Fin</label>
+            <select class="select select-sm select-bordered" id="end-year">
+              <option value="2024">2024</option>
+              <!-- Plus d'options -->
+            </select>
+            <select class="select select-sm select-bordered" id="end-month">
+              <option value="June">Juin</option>
+              <!-- Plus d'options -->
+            </select>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="index.js"></script>
