New shiny titles

--- a/mortgages/index.html
+++ b/mortgages/index.html
@@ -37,7 +37,8 @@
     >
       <div class="grid grid-rows-[15px_auto_40px] items-center justify-center">
         <header class="text-lg font-extrabold">
-          Hypothèques mensuelles au fil du temps
+          Le nombre d'hypothèques mensuelles au Québec selon la région au fil du
+          temps
         </header>
         <div class="graph" id="stackedArea">
           <svg class="stackedArea-svg"></svg>
