--- a/sales/index.html
+++ b/sales/index.html
@@ -28,7 +28,10 @@
     </div>
 
     <div class="flex flex-col">
-      <h1 class="text-lg font-extrabold">Nombre d'achats par gamme de prix</h1>
+      <h1 class="text-lg font-extrabold">
+        Le nombre total de ventes de propriétés au Québec selon la région par
+        gamme de prix
+      </h1>
       <div id="svg-container-ventes">
         <div id="content-ventes"></div>
       </div>
