--- a/transfers/index.html
+++ b/transfers/index.html
@@ -44,7 +44,10 @@
     </div>
 
     <div class="flex flex-col flex-1 bg-gray-100">
-      <h1 class="text-lg font-extrabold">Nombre de Requêtes par Région</h1>
+      <h1 class="text-lg font-extrabold">
+        Le nombre de requêtes de transfert de propriétés au Québec par région au
+        fil du temps
+      </h1>
       <div class="controls mb-4 flex p-4 items-center justify-center">
         <label for="timeSelector" class="mr-2"
           >Sélectionner l'interval de temps:</label
