--- a/difficulties/index.html
+++ b/difficulties/index.html
@@ -29,7 +29,7 @@
 
     <div class="relative space-y-4">
       <h1 class="text-lg font-extrabold">
-        La détresse financière au Québec en nombre
+        La détresse financière au Québec selon les catégories par région
       </h1>
       <svg class="mx-auto" id="mapSvg"></svg>
       <svg class="mx-auto" id="legendSvg"></svg>
