--- a/difficulties/index.html
+++ b/difficulties/index.html
@@ -28,9 +28,9 @@
     </div>
 
     <div class="relative space-y-4">
-      <h1 class=" text-3xl font-extrabold dark:text-white">
-        La détresse financière au Québec en nombre
-      </h1>
+        <h1 class="text-lg font-extrabold">
+            La détresse financière au Québec selon les catégories par région
+          </h1>
       <svg class="mx-auto" id="mapSvg"></svg>
       <svg class="mx-auto" id="legendSvg"></svg>
       <svg id="messageSvg"></svg>
