switch build to vite instead of parcel

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link href="./output.css" rel="stylesheet" />
+    <link href="output.css" rel="stylesheet" />
     <script src="https://d3js.org/d3.v6.min.js" defer></script>
   </head>
   <body
@@ -32,13 +32,11 @@
       class="flex h-full flex-col gap-4 p-4 bg-neutral-400"
       aria-label="Main Navigation"
     >
-      <a class="p-2 font-bold btn btn-neutral" href="/">Accueil</a>
-      <a class="p-2 font-bold btn" href="/transfers">Transferts</a>
-      <a class="p-2 font-bold btn" href="/sales">Ventes</a>
-      <a class="p-2 font-bold btn" href="/difficulties"
-        >Difficultés financières</a
-      >
-      <a class="p-2 font-bold btn" href="/mortgages">Hypothèques</a>
+      <a class="p-2 font-bold btn btn-neutral" href="./">Accueil</a>
+      <a class="p-2 font-bold btn" href="transfers/index.html">Transferts</a>
+      <a class="p-2 font-bold btn" href="sales/index.html">Ventes</a>
+      <a class="p-2 font-bold btn" href="difficulties/index.html">Difficultés financières</a>
+      <a class="p-2 font-bold btn" href="mortgages/index.html">Hypothèques</a>
     </nav>
     <main class="flex-1 flex flex-col gap-4 p-4" id="content">
       <h1 class="text-lg font-extrabold">
@@ -82,7 +80,7 @@
               Infobulles contenant la région, l'année et le nombre de requêtes
             </li>
           </ul>
-          <a href="/transfers" class="btn btn-primary mt-2 self-end"
+          <a href="transfers/index.html" class="btn btn-primary mt-2 self-end"
             >Voir plus</a
           >
         </div>
@@ -110,7 +108,7 @@
               pour chaque gamme de prix
             </li>
           </ul>
-          <a href="/sales" class="btn btn-primary mt-2 self-end">Voir plus</a>
+          <a href="sales/index.html" class="btn btn-primary mt-2 self-end">Voir plus</a>
         </div>
         <div class="bg-white shadow-md p-4 rounded-lg flex flex-col">
           <h2 class="text-xl font-bold mb-2 text-center">
@@ -139,7 +137,7 @@
               faillites, hypothèques construction, préavis et saisies)
             </li>
           </ul>
-          <a href="/difficulties" class="btn btn-primary mt-2 self-end"
+          <a href="difficulties/index.html" class="btn btn-primary mt-2 self-end"
             >Voir plus</a
           >
         </div>
@@ -165,7 +163,7 @@
               nette du volume des hypothèques durant une période
             </li>
           </ul>
-          <a href="/mortgages" class="btn btn-primary mt-2 self-end"
+          <a href="mortgages/index.html" class="btn btn-primary mt-2 self-end"
             >Voir plus</a
           >
         </div>
