--- a/difficulties/index.html
+++ b/difficulties/index.html
@@ -18,13 +18,11 @@
     class="grid min-h-screen w-full lg:grid-cols-[135px_1fr_280px]"
   >
     <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
-      <a class="p-2 font-bold btn" href="/">Accueil</a>
-      <a class="p-2 font-bold btn" href="/transfers">Transferts</a>
-      <a class="p-2 font-bold btn" href="/sales">Ventes</a>
-      <a class="p-2 font-bold btn btn-neutral" href="/difficulties"
-        >Difficultés financières</a
-      >
-      <a class="p-2 font-bold btn" href="/mortgages">Hypothèques</a>
+      <a class="p-2 font-bold btn" href="../index.html">Accueil</a>
+      <a class="p-2 font-bold btn" href="../transfers/index.html">Transferts</a>
+      <a class="p-2 font-bold btn" href="../sales/index.html">Ventes</a>
+      <a class="p-2 font-bold btn btn-neutral" href="../difficulties/index.html">Difficultés financières</a>
+      <a class="p-2 font-bold btn" href="../mortgages/index.html">Hypothèques</a>
     </div>
 
     <div class="relative space-y-4">
@@ -70,6 +68,6 @@
       </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
