--- a/mortgages/index.html
+++ b/mortgages/index.html
@@ -18,13 +18,11 @@
     class="grid min-h-screen h-full w-full md:grid-cols-[220px_1fr] lg:grid-cols-[135px_1fr]"
   >
     <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
-      <a class="p-2 font-bold btn" href="/">Accueil</a>
-      <a class="p-2 font-bold btn" href="/transfers">Transferts</a>
-      <a class="p-2 font-bold btn" href="/sales">Ventes</a>
-      <a class="p-2 font-bold btn" href="/difficulties"
-        >Difficultés financières</a
-      >
-      <a class="p-2 font-bold btn btn-neutral" href="/mortgages">Hypothèques</a>
+      <a class="p-2 font-bold btn" href="../index.html">Accueil</a>
+      <a class="p-2 font-bold btn" href="../transfers/index.html">Transferts</a>
+      <a class="p-2 font-bold btn" href="../sales/index.html">Ventes</a>
+      <a class="p-2 font-bold btn" href="../difficulties/index.html">Difficultés financières</a>
+      <a class="p-2 font-bold btn btn-neutral" href="../mortgages/index.html">Hypothèques</a>
     </div>
 
     <div
@@ -137,9 +135,9 @@
       </div>
     </div>
 
-    <script src="index.js"></script>
-    <script src="preprocess.js"></script>
-    <script src="interaction.js"></script>
-    <script src="viz.js"></script>
+    <script src="index.js" type="module"></script>
+    <script src="preprocess.js" type="module"></script>
+    <script src="interaction.js" type="module"></script>
+    <script src="viz.js" type="module"></script>
   </body>
 </html>
