--- a/transfers/index.html
+++ b/transfers/index.html
@@ -34,13 +34,11 @@
     class="grid min-h-screen w-full md:grid-cols-[220px_1fr] lg:grid-cols-[135px_1fr]"
   >
     <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
-      <a class="p-2 font-bold btn" href="/">Accueil</a>
-      <a class="p-2 font-bold btn btn-neutral" href="/transfers">Transferts</a>
-      <a class="p-2 font-bold btn" href="/sales">Ventes</a>
-      <a class="p-2 font-bold btn" href="/difficulties"
-        >Difficultés financières</a
-      >
-      <a class="p-2 font-bold btn" href="/mortgages">Hypothèques</a>
+      <a class="p-2 font-bold btn" href="../index.html">Accueil</a>
+      <a class="p-2 font-bold btn btn-neutral" href="../transfers/index.html">Transferts</a>
+      <a class="p-2 font-bold btn" href="../sales/index.html">Ventes</a>
+      <a class="p-2 font-bold btn" href="../difficulties/index.html">Difficultés financières</a>
+      <a class="p-2 font-bold btn" href="../mortgages/index.html">Hypothèques</a>
     </div>
 
     <div class="flex flex-col flex-1 bg-gray-100">
@@ -75,6 +73,6 @@
       </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
